[gd_scene load_steps=6 format=3 uid="uid://bihwsl0hw2r35"]

[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="1_3odhi"]
[ext_resource type="Theme" uid="uid://uqij1mue7qu1" path="res://themes/font_theme.tres" id="1_nkekj"]
[ext_resource type="Theme" uid="uid://dule66g8xd2qn" path="res://themes/buttontheme.tres" id="2_eghry"]
[ext_resource type="Theme" uid="uid://stl2ux72t250" path="res://themes/panel.tres" id="3_7bc1q"]
[ext_resource type="FontFile" uid="uid://cebrmguk7oa5" path="res://assets/fonts/ThaleahFat.ttf" id="4_86ku3"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme = ExtResource("1_nkekj")
script = ExtResource("1_3odhi")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1152.0
offset_top = -336.0
offset_bottom = 336.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Sliders" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.396
anchor_top = 0.47
anchor_right = 0.396
anchor_bottom = 0.47
offset_left = -0.192017
offset_top = 0.159973
offset_right = 239.808
offset_bottom = 292.16
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_7bc1q")

[node name="Music" type="Panel" parent="Sliders"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.106
anchor_bottom = 0.106
offset_top = 0.0479984
offset_right = 226.0
offset_bottom = 58.048
grow_horizontal = 2
grow_vertical = 2

[node name="MusicSlider" type="HSlider" parent="Sliders/Music"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.7
grow_horizontal = 2
grow_vertical = 2
value = 50.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Sliders/Music"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
text = "Music Volume"
horizontal_alignment = 1

[node name="SFX" type="Panel" parent="Sliders"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.106
anchor_bottom = 0.106
offset_top = 73.048
offset_right = 226.0
offset_bottom = 131.048
grow_horizontal = 2
grow_vertical = 2

[node name="SFXSlider" type="HSlider" parent="Sliders/SFX"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.7
grow_horizontal = 2
grow_vertical = 2
value = 50.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Sliders/SFX"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
text = "SFX Volume"
horizontal_alignment = 1

[node name="AutoReload" type="Panel" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 288.0
offset_right = 680.0
offset_bottom = 328.0
theme = ExtResource("3_7bc1q")

[node name="CheckButton" type="CheckButton" parent="AutoReload"]
layout_mode = 0
offset_right = 224.0
offset_bottom = 39.0
theme_override_fonts/font = ExtResource("4_86ku3")
theme_override_font_sizes/font_size = 30
text = "Auto reload"

[node name="BackToMenuButton" type="Button" parent="."]
layout_mode = 0
offset_right = 232.0
offset_bottom = 104.0
theme = ExtResource("2_eghry")

[node name="Label" type="Label" parent="BackToMenuButton"]
layout_mode = 0
offset_right = 232.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 40
text = "Back To Menu
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="value_changed" from="Sliders/Music/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Sliders/SFX/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="toggled" from="AutoReload/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
